# agent-minimal

./: CMakeLists.txt  LICENSE.txt  README.md  config.json
src/: main.cpp
src/core/: Agent.cpp  Agent.h  ChatHistory.cpp  ChatHistory.h  Config.cpp  Config.h  JsonHelper.h  Model.cpp  Model.h  Sampler.cpp  Sampler.h  Tool.cpp  Tool.h  ToolRegistry.cpp  ToolRegistry.h
src/tools/: ExecuteCommandTool.cpp  ExecuteCommandTool.h  FileTool.cpp  FileTool.h  SearchFilesTool.cpp  SearchFilesTool.h  SearchPatternTool.cpp  SearchPatternTool.h  WebFetchTool.cpp  WebFetchTool.h  WebSearchTool.cpp  WebSearchTool.h
